# game-2048-rust

./: .gitignore  .project  Cargo.toml  README.md  log.txt  rustfmt.toml  testing_eclipse_git.txt  used concepts.txt
.github/workflows/: rust.yml
src/: controllers.rs  game.rs  lib.rs  main.rs  views.rs
src/controllers/: console.rs  mod.rs  ncurses.rs
src/game/: board.rs  mod.rs
src/game/board/: _board.rs  board.rs  coord.rs  cursor.rs  merger.rs  mod.rs  move.rs  test.rs
src/views/: console.rs  mod.rs  ncurses.rs
src/views/ncurses/: animator.rs  mod.rs  ncwindow.rs  pallete.rs  view.rs
