[package]
name = "game2048"
version = "0.1.1"
authors = ["quadruple-output"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"
console = "0.10.3"
log = "0.4.17"
ncurses = "5"
rand = "0.4"
stderrlog = "0.4.3"
crossbeam = "0.7" # crossbeam::scope - for spawning threads that borrow local variables from the stack.
